--- a/frntend/index.html
+++ b/frntend/index.html
@@ -44,9 +44,9 @@
             <ul class="nav navbar-nav" role="tablist">
                 <li class="nav-item"><a class="nav-link active" href="" style="color: white">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="http://localhost:3000/admin" target="iframe"
-                        style="color: white">Admin Login</a></li>
+                        style="color: white">Admin </a></li>
                 <li class="nav-item"><a class="nav-link" href="http://localhost:3000/supervisor" target="iframe"
-                        style="color: white">Supervisor Login</a></li>
+                        style="color: white">Supervisor</a></li>
             </ul>
         </div>
     </nav>
