--- a/frntend/Supervisor/viewProducts.html
+++ b/frntend/Supervisor/viewProducts.html
@@ -40,6 +40,7 @@
 
 <body onload="loadData()">
     <center>
+        <h1>Product Details</h1>
         <table id="table" class="tablecss" style="width:50%;"></table>
     </center>
     <div class="modal fade" id="myModal" role="dialog">
